# everos-memory-archive

./: .gitignore  LICENSE  README.md  pyproject.toml
archive_memory/: __init__.py  __main__.py  classifier.py  cli.py  compiler.py  config.py  everos_client.py  frontmatter.py  manifest.py  models.py  redactor.py  renderer.py  scanner.py  search.py  utils.py  verify.py
archive_memory/collectors/: claude_code.py  codex.py  common.py
archive_memory/sinks/: __init__.py  archive_files.py
configs/: local.example.toml
scripts/: backup-agent-memories.sh  backup-to-everos.sh  import-memory-pack-to-everos.sh
skills/archive-agent-memories/: SKILL.md
tests/: test_archive_memory.py
