[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "everos-memory-archive"
version = "0.1.0"
description = "Read-only archive importer for Codex and Claude Code memories into an EverOS-style local archive."
requires-python = ">=3.9"
authors = [{ name = "EverOS Memory Archive Contributors" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = []

[project.scripts]
everos-memory-archive = "archive_memory.cli:main"

[tool.setuptools.packages.find]
include = ["archive_memory*"]
